--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
     "nodemon": "^2.0.22",
     "yargs": "^17.7.2"
   },
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "commander": "^11.1.0"
   }
 }
